fixed viewport meta tag

--- a/views/partials/_head.jade
+++ b/views/partials/_head.jade
@@ -2,7 +2,7 @@ head
   meta(charset="UTF-8")
   title= pageTitle
   meta(name="theme-color" content="#9c8dec")
-  meta(content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1")
+  meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1")
   meta(name="description" content="A Lorem Ipsum generator for anime fans, baka!")
   meta(name="twitter:card" content="summary" )
   meta(name="twitter:creator" content="@elguey77")
